# MattozCommon

./: CMakeLists.txt
include/: datastack.h  stringbuilder.h
src/: datastack.c  stringbuilder.c
